<resources>
    <string name="app_name">19PiedraPapelTijeraFicheros</string>

    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_music">Music</string>
    <string name="text_play">Play</string>
    <string name="text_estadistica">Estadistica</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
